--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,8 +1,44 @@
-.title{
-    text-align: center;
+html, body{
+    height: 100%;
+    overflow: hidden;
 }
 
-.center-container {
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #FFFFFF;
+    background-image: url('../assets/bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    margin: 0;
+}
+
+*{
+    padding: 5px;
+    margin: 1px auto;
+}
+
+.block{
+    background: rgba(255, 255, 255, 0.4);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 10px auto; /* Optional: Centers the div horizontally */
+}
+
+.title{
+    text-align: center;
+    margin: 10px auto;
+}
+
+.center {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,13 +60,13 @@
 }
 
 @keyframes animation-red{
-    0% {background-color: white;}
+    0% {background-color: #afeeee;}
     50% {background-color: red;}
-    100% {background-color: white;}
+    100% {background-color: #afeeee;}
 }
 
 @keyframes animation-green{
-    0% {background-color: white;}
+    0% {background-color: #afeeee;}
     50% {background-color: green;}
-    100% {background-color: white;}
+    100% {background-color: #afeeee;}
 }
